fix:header search spacing

--- a/styles/css/Global/vtex.breadcrumb.css
+++ b/styles/css/Global/vtex.breadcrumb.css
@@ -49,7 +49,7 @@
 
 @media (min-width: 1025px) {
   .container {
-    margin-top: 1.5rem;
+    margin-top: .5rem;
     margin-bottom: .5rem;
   }
 }
