--- a/styles/css/Global/vtex.rich-text.css
+++ b/styles/css/Global/vtex.rich-text.css
@@ -7,7 +7,7 @@
   font-size: 1.5rem;
   font-family: var(--font-poppins-semibold);
   margin-bottom: .2rem;
-  margin-top: 1rem;
+  margin-top: 0rem;
 }
 
 .paragraph--search-page__header--content{
