--- a/styles/css/Pages/Home/prebel.components.css
+++ b/styles/css/Pages/Home/prebel.components.css
@@ -24,7 +24,7 @@
 
 
 .highlightContent--search-page__bullets{
-  margin: 1.5rem 0 !important;
+  margin: 0;
   scrollbar-width: none;
 }
 
