--- a/styles/css/Pages/Home/vtex.slider-layout.css
+++ b/styles/css/Pages/Home/vtex.slider-layout.css
@@ -21,6 +21,6 @@
   width:100%;
 }
 
-/* .sliderLayoutContainer--banner-slider{
-  margin-top: 5px;
-} */
+ .sliderLayoutContainer--banner-slider{
+  margin-bottom: 1rem;
+} 
